# dummy-codebuild-project

./: .gitignore  Dockerfile  Makefile  README.md  buildspec.yaml  buildspec.yml  main.py  main.tf  pyproject.toml  tf_versions.tf  variables.tf
infrastructure/: main.tf  variables.tf
package/: __main__.py  invoketime.py  methods.py
tests/: test_package.py
