[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Tom Potter <tom.potter@bbc.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-randomly = "^3.16.0"
pytest-black = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
